testdata/parser/ok/1-PrintLiteral.java
int main() {
		printInt(12);
		return 0;
}
