testdata/parser/error/NestedFunctions.java
int main() {
    boolean test() {
        return false;
    }
    return 0;
}